# BLM-Stories

./: api.py  main.py  mapping.py  pyproject.toml  readme.md
static/: table.css  test.html
templates/: choose.html  index.html  submit.html  submitted.html  thankyou.html
unfinished/storiesList/: 1.uhtml
